--- a/Orchard_Project_Library_2/Orchard_Project_Library_2_Web_App/Orchard_Project_Library_2_Web_App.csproj
+++ b/Orchard_Project_Library_2/Orchard_Project_Library_2_Web_App/Orchard_Project_Library_2_Web_App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="OrchardCore.Application.Cms.Targets" Version="1.2.2" />
+    <PackageReference Include="OrchardCore.Theme.Targets" Version="1.2.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Orchard_Project_Library_2.BookModule\Orchard_Project_Library_2.BookModule.csproj" />
+    <ProjectReference Include="..\Orchard_Project_Library_2.MainTheme\Orchard_Project_Library_2.MainTheme.csproj" />
   </ItemGroup>
 
 </Project>
